# cpp-libucd

./: Android.mk  Makefile.am  README.md  autoclean.sh  autogen.sh  configure.ac
debian/: README.source  changelog  control  copyright  libucd-dev.install  postinst  postrm  preinst  prerm  rules  watch
langstats/: Makefile.am  mkcharstats.cpp  mkpairmodel.py  readme.txt
langstats/czech/: charstats_czech_iso-8859-2.txt  czech_iso-8859-2.txt  czech_utf-8.txt
langstats/finnish/: charstats_finnish_WINDOWS-1252.txt  finnish_UTF-8.txt  finnish_WINDOWS-1252.txt
langstats/french/: charstats_french_WINDOWS-1252.txt
langstats/german/: charstats_german_WINDOWS-1252.txt  german_WINDOWS-1252.txt
langstats/greek/: charstats_greek_ISO-8859-7.txt  charstats_greek_WINDOWS-1253.txt
langstats/hungarian/: charstats_hungarian_ISO-8859-2.txt  charstats_hungarian_WINDOWS-1250.txt  hungarian_ISO-8859-2.txt  hungarian_WINDOWS-1250.txt
langstats/polish/: charstats_polish_iso-8859-2.txt  polish_iso-8859-2.txt  polish_utf-8.txt
langstats/russian/: russian-koi8r.txt
langstats/spanish/: charstats_spanish_windows-1252.txt  spanish_utf-8.txt  spanish_windows-1252.txt
langstats/swedish/: charstats_swedish_WINDOWS-1252.txt  swedish_UTF-8.txt  swedish_WINDOWS-1252.txt
langstats/turkish/: charstats_turkish_ISO-8859-9.txt  turkish_ISO-8859-9.txt  turkish_UTF-8.txt
langstats/ukrainian/: ukrainian-koi8u.txt
man/: Makefile.am
man/en/: ucd.1  ucd_clear.3  ucd_end.3  ucd_init.3  ucd_parse.3  ucd_reset.3
man/zh-CN/: ucd.1  ucd_clear.3  ucd_end.3  ucd_init.3  ucd_parse.3  ucd_reset.3
man/zh_CN/: ucd_clear.3  ucd_reset.3
pacman/: PKGBUILD
pkgconfig/: Makefile.am  libucd.pc.in
rpm/: Makefile.am  libucd.spec  libucd.spec.in  pkgrpm-cpp-libucd.sh
src/: Big5Freq.tab  CharDistribution.cpp  EUCKRFreq.tab  EUCTWFreq.tab  JISFreq.tab  JpCntx.cpp  LangBulgarianModel.cpp  LangCyrillicModel.cpp  LangGreekModel.cpp  LangHebrewModel.cpp  LangHungarianModel.cpp  LangThaiModel.cpp  Makefile.am  nsCharSetProber.h  nsCodingStateMachine.h  nsEscSM.cpp  nsMBCSGroupProber.cpp  nsMBCSSM.cpp  nsSBCSGroupProber.cpp  nsSBCSGroupProber.h  nsSBCharSetProber.cpp  nsSBCharSetProber.h  nsUTF8Prober.cpp  nsUniversalDetector.cpp  nsUniversalDetector.h  nscore.h  prmem.h  ucdapi.cpp
test/: fetchlangwiki.sh  runtest.sh
test/ua/KOI8-U/: wikitop_ua_KOI8-U.txt
test/zh/BIG5/: wikitop_zh_BIG5.txt
test/zh/GB18030/: wikitop_zh_GB18030.txt
test/zh/UTF-8/: wikitop_zh_UTF-8.txt
utils/: Makefile.am  getline.h  i18n.c  i18n.h  sample.c  ucd.c
