
MAN3ZHCN= \
    zh_CN/ucd_init.3 \
    zh_CN/ucd_clear.3 \
    zh_CN/ucd_parse.3 \
    zh_CN/ucd_end.3 \
    zh_CN/ucd_reset.3 \
    $(NULL)

MAN1ZHCN= \
    zh_CN/ucd.1 \
    $(NULL)

MAN1EN= \
    en/ucd_init.3 \
    en/ucd_clear.3 \
    en/ucd_parse.3 \
    en/ucd_end.3 \
    en/ucd_reset.3 \
    $(NULL)

MAN3EN= \
    en/ucd.1 \
    $(NULL)

EXTRA_DIST = \
    $(MAN1ZHCN) \
    $(MAN3ZHCN) \
    $(NULL)

dist_man_MANS = \
    $(MAN1EN) \
    $(MAN3EN) \
    $(NULL)

zh_CN_man3dir = $(mandir)/zh_CN/man3
zh_CN_man3_DATA = $(MAN3ZHCN)

zh_CN_man1dir = $(mandir)/zh_CN/man1
zh_CN_man1_DATA = $(MAN1ZHCN)
